# fooaudio

./: CMakeLists.txt
src/fooaudio/: CMakeLists.txt  fooapplication.cpp  fooapplication.h  fooaudioengine.cpp  foomainwindow.cpp  foomainwindow.hpp  fooplaylistwidget.cpp
src/fooaudio/logic/: eventlistener.cpp  eventlistener.h  logic.pro
